@@ -22,6 +22,12 @@ public class WatcherPropertiesUpdate {
 
   @Nullable private Boolean component;
 
+  @Nullable private Boolean restTemplate;
+
+  @Nullable private Boolean webClient;
+
+  @Nullable private Boolean actuatorHealth;
+
   private <T> void applyTo(T value, Consumer<T> setter) {
     if (value != null) {
       setter.accept(value);
@@ -34,5 +40,8 @@ public class WatcherPropertiesUpdate {
     applyTo(service, t::setService);
     applyTo(repository, t::setRepository);
     applyTo(component, t::setComponent);
+    applyTo(restTemplate, t::setRestTemplate);
+    applyTo(webClient, t::setWebClient);
+    applyTo(actuatorHealth, t::setActuatorHealth);
   }
 }
